--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     </head>
     <body>
         <header>
-            <img id="logo" src="/finalslides/logolockup.png">
+            <img id="logo" src="finalslides/logolockup.png">
             <ul>
                 <li><a href="http://www.jonwashdesign.com/index">HOME</a></li>
                 <li><a href="http://www.jonwashdesign.com/portfolio">PORTFOLIO</a></li>
@@ -84,35 +84,35 @@
             </ul>
         </header>
         <article>
-            <img class="slide" src="/finalslides/MDGBio Portfolio Submission2.png">
-            <img class="slide" src="/finalslides/MDGBio Portfolio Submission3.png">
-            <img class="slide" src="/finalslides/MDGBio Portfolio Submission.png">
-            <img class="slide" src="/finalslides/MDGBio Portfolio Submission4.png">
-            <img class="slide" src="/finalslides/MDGBio Portfolio Submission5.png">
-            <img class="slide" src="/finalslides/MDGBio Portfolio Submission6.png">
-            <img class="slide" src="/finalslides/MDGBio Portfolio Submission7.png">
-            <img class="slide" src="/finalslides/MDGBio Portfolio Submission8.png">
-            <img class="slide" src="/finalslides/MDGBio Portfolio Submission9.png">
-            <img class="slide" src="/finalslides/MDGBio Portfolio Submission10.png">
-            <img class="slide" src="/finalslides/MDGBio Portfolio Submission11.png">
-            <img class="slide" src="/finalslides/MDGBio Portfolio Submission12.png">
-            <img class="slide" src="/finalslides/MDGBio Portfolio Submission13.png">
-            <img class="slide" src="/finalslides/MDGBio Portfolio Submission14.png">
-            <img class="slide" src="/finalslides/MDGBio Portfolio Submission15.png">
-            <img class="slide" src="/finalslides/MDGBio Portfolio Submission16.png">
-            <img class="slide" src="/finalslides/MDGBio Portfolio Submission17.png">
-            <img class="slide" src="/finalslides/MDGBio Portfolio Submission18.png">
-            <video src="/finalslides/MDGBio Portfolio Submission18a.mp4" autoplay muted>Your browser does not suport videos</video>
-            <img class="slide" src="/finalslides/MDGBio Portfolio Submission19.png">
-            <img class="slide" src="/finalslides/MDGBio Portfolio Submission20.png">
-            <img class="slide" src="/finalslides/MDGBio Portfolio Submission21.png">
-            <img class="slide" src="/finalslides/MDGBio Portfolio Submission22.png">
-            <img class="slide" src="/finalslides/MDGBio Portfolio Submission23.png">
-            <img class="slide" src="/finalslides/MDGBio Portfolio Submission24.png">
-            <img class="slide" src="/finalslides/MDGBio Portfolio Submission25.png">
+            <img class="slide" src="finalslides/MDGBio Portfolio Submission2.png">
+            <img class="slide" src="finalslides/MDGBio Portfolio Submission3.png">
+            <img class="slide" src="finalslides/MDGBio Portfolio Submission.png">
+            <img class="slide" src="finalslides/MDGBio Portfolio Submission4.png">
+            <img class="slide" src="finalslides/MDGBio Portfolio Submission5.png">
+            <img class="slide" src="finalslides/MDGBio Portfolio Submission6.png">
+            <img class="slide" src="finalslides/MDGBio Portfolio Submission7.png">
+            <img class="slide" src="finalslides/MDGBio Portfolio Submission8.png">
+            <img class="slide" src="finalslides/MDGBio Portfolio Submission9.png">
+            <img class="slide" src="finalslides/MDGBio Portfolio Submission10.png">
+            <img class="slide" src="finalslides/MDGBio Portfolio Submission11.png">
+            <img class="slide" src="finalslides/MDGBio Portfolio Submission12.png">
+            <img class="slide" src="finalslides/MDGBio Portfolio Submission13.png">
+            <img class="slide" src="finalslides/MDGBio Portfolio Submission14.png">
+            <img class="slide" src="finalslides/MDGBio Portfolio Submission15.png">
+            <img class="slide" src="finalslides/MDGBio Portfolio Submission16.png">
+            <img class="slide" src="finalslides/MDGBio Portfolio Submission17.png">
+            <img class="slide" src="finalslides/MDGBio Portfolio Submission18.png">
+            <video src="finalslides/MDGBio Portfolio Submission18a.mp4" autoplay muted>Your browser does not suport videos</video>
+            <img class="slide" src="finalslides/MDGBio Portfolio Submission19.png">
+            <img class="slide" src="finalslides/MDGBio Portfolio Submission20.png">
+            <img class="slide" src="finalslides/MDGBio Portfolio Submission21.png">
+            <img class="slide" src="finalslides/MDGBio Portfolio Submission22.png">
+            <img class="slide" src="finalslides/MDGBio Portfolio Submission23.png">
+            <img class="slide" src="finalslides/MDGBio Portfolio Submission24.png">
+            <img class="slide" src="finalslides/MDGBio Portfolio Submission25.png">
         </article>
         <footer>
-            <img id="logo2" src="/finalslides/logo2.png">
+            <img id="logo2" src="finalslides/logo2.png">
             <p> © JONWASH Design 2023,  Saint Charles, Illinois</p>
         </footer>
     </body>
